--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Flask-JWT-Extended==4.6.0
 Flask-Migrate==4.0.7
 flask-sqlalchemy==3.1.1
 greenlet==3.0.3
+gunicorn==20.1.0
 idna==3.7
 importlib-metadata==7.2.0
 importlib-resources==6.4.0
