--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ cffi==1.17.1
 chardet==3.0.4
 charset-normalizer==3.3.2
 click==8.1.7
-cloud-init==23.4.4
+#cloud-init==23.4.4
 colorama==0.4.3
 command-not-found==0.3
 configobj==5.0.6
