--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 #cloud-init==23.4.4
 colorama==0.4.3
-command-not-found==0.3
+#command-not-found==0.3
 configobj==5.0.6
 constantly==15.1.0
 cryptography==2.8
