--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ cryptography==2.8
 dbus-python==1.2.16
 distlib==0.3.8
 distro==1.4.0
-distro-info==0.23+ubuntu1.1
+#distro-info==0.23+ubuntu1.1
 entrypoints==0.3
 filelock==3.14.0
 flasgger==0.9.7.1
