--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Flask-JWT-Extended==4.6.0
 Flask-Migrate==4.0.7
 flask-sqlalchemy==3.1.1
 greenlet==3.0.3
+gunicorn==23.0.0
 idna==3.7
 importlib-metadata==7.2.0
 importlib-resources==6.4.0
@@ -21,6 +22,7 @@ jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
 mysqlclient==2.2.4
+packaging==24.1
 pycparser==2.22
 PyJWT==2.8.0
 PyMySQL==1.1.1
